
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.


MOD 0.9.5 beta 4 (rev 1587 - October 2, 2006)
====================================

* Replace original MODx theme with MODxLightBlue (1586)
* Fix for the file manager to allow for filetype setting changes in the system configuration. (1585)
* Added an optional $fields parameter to the DBAPI delete function. While not necessary in most cases, it allows for more complex multi-table deletes that use joins. (1558)
* Fix JS debug errors when no submenu is present for an item in the MODxHost dropdown menu. (1570)
* Remove double headings where appropriate, also removed some remaining references to _tx_.gif for the headings (will allow all remaining headings to get consistent styling). (1567,1568)
* Lots of minor bugfixes and tweaks to the DocManager module. (1565,1566)
* Stop header.inc.php and footer.inc.php being included when running a module. (1562)
* Remove message count from the topbar header (1557)
* Remove JS functions/calls to non-existant "Sync" in manager (1556)
* Fix warnings with auto-loaded modules (1556)
* Fixed default manager_theme selection when added new manager users. (1552)
* Update AjaxSearch to most recent version. (1550)
* Update to delete categories to check appropriate permissions & display correctly. (1550)
* [FS#124] RegClientStartupScript and RegClientScript not always inserting code properly. (1550)
* Preliminary fixes for new QuickEdit using moo.fx (1549)
* Updated Ajax Search and adding manager resource category deleting (1548)
* FS#124: RegClient(Startup)Script now properly inserts code (1543)
* Only make RTE for chunks load if selected from dropdown (ie. stop it loading by default when RTE is selected in site config).